--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -216,3 +216,23 @@ li {
     color: red;
   }
 }
+
+.empty_data {
+  width: 100%;
+  min-height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+
+  img {
+    width: 100px;
+    height: 100px;
+  }
+
+  span {
+    font-size: 16px;
+    font-weight: 500;
+  }
+}
