--- a/src/scss/features/test-management.scss
+++ b/src/scss/features/test-management.scss
@@ -1,4 +1,549 @@
 .test-management {
   padding-right: 30px;
   padding-bottom: 40px;
+
+  .pagination {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: end;
+    padding: 10px 12px;
+    background-color: #fafafa;
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+  }
+
+  .search__block {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    margin-bottom: 20px;
+
+    &--column {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      gap: 5px;
+
+      label {
+        font-size: 16px;
+        font-weight: 500;
+      }
+
+      input {
+        width: 100%;
+        height: 36px;
+        padding: 0 15px;
+        font-size: 16px;
+        border-radius: 6px;
+        border: 1px solid #adb5bd;
+        outline-color: #adb5bd;
+
+        &:focus {
+          border-color: #42c6ff;
+          outline-color: #42c6ff;
+        }
+
+        &::placeholder {
+          color: #bbb;
+        }
+      }
+
+      &.search-action {
+        display: flex;
+        flex-direction: row;
+        align-items: end;
+        gap: 10px;
+
+        button {
+          border: 0;
+          outline: none;
+          flex: 1;
+          height: 36px;
+          cursor: pointer;
+          font-size: 16px;
+          font-weight: 600;
+          border-radius: 6px;
+          transition: all 0.3s;
+
+          &:first-child {
+            background-color: #1eaae7;
+            color: #fff;
+
+            &:hover {
+              background-color: #148abe;
+            }
+          }
+          &:last-child {
+            background-color: #38b000;
+            color: #fff;
+
+            &:hover {
+              background-color: #006400;
+            }
+          }
+
+          &:nth-child(2) {
+            background-color: #fff;
+
+            &:hover {
+              background-color: #fafafa;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.test-detail {
+  padding-right: 30px;
+  padding-bottom: 40px;
+
+  &__header {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+    h3 {
+      font-size: 24px;
+      font-weight: 600;
+    }
+
+    .back {
+      text-decoration: none;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      width: 80px;
+      height: 36px;
+      font-size: 16px;
+      font-weight: 500;
+      background-color: #fff;
+      box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+      border-radius: 5px;
+
+      &:hover {
+        background-color: #fafafa;
+      }
+    }
+  }
+
+  &__infor-test {
+    margin-top: 20px;
+    width: 100%;
+    padding: 20px;
+    border-radius: 5px;
+    background-color: #fff;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+
+    .column {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      gap: 5px;
+
+      label {
+        font-size: 16px;
+        font-weight: 500;
+      }
+
+      input {
+        width: 100%;
+        height: 36px;
+        padding: 0 15px;
+        font-size: 16px;
+        border-radius: 6px;
+        border: 1px solid #adb5bd;
+        outline-color: #adb5bd;
+
+        &:focus {
+          border-color: #42c6ff;
+          outline-color: #42c6ff;
+        }
+
+        &::placeholder {
+          color: #bbb;
+        }
+      }
+    }
+
+    .save-test-infor {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: end;
+
+      button {
+        border: 0;
+        outline: none;
+        height: 36px;
+        cursor: pointer;
+        font-size: 16px;
+        font-weight: 600;
+        border-radius: 6px;
+        transition: all 0.3s;
+        width: 50%;
+        background-color: #38b000;
+        color: #fff;
+
+        &:hover {
+          background-color: #006400;
+        }
+      }
+    }
+  }
+
+  .test-part {
+    width: 100%;
+    margin-top: 20px;
+
+    &__header {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+
+      h3 {
+        font-size: 24px;
+        font-weight: 600;
+      }
+
+      button {
+        border: 0;
+        outline: none;
+        height: 36px;
+        cursor: pointer;
+        font-size: 16px;
+        font-weight: 600;
+        border-radius: 6px;
+        transition: all 0.3s;
+        width: 150px;
+        background-color: #1eaae7;
+        color: #fff;
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+
+        &:hover {
+          background-color: #148abe;
+        }
+      }
+    }
+
+    &__reading-resource {
+      margin-top: 20px;
+      margin-bottom: 20px;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+
+      img {
+        width: 600px;
+      }
+
+      p {
+        font-size: 16px;
+        display: block;
+        width: 100%;
+        text-align: left;
+      }
+    }
+
+    &__questions {
+      width: 100%;
+      margin-top: 20px;
+      background-color: #fff;
+      box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+      border-radius: 5px;
+      padding: 20px;
+      max-height: 600px;
+      overflow-y: auto;
+      &::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        border-radius: 10px;
+        background-color: #f5f5f5;
+      }
+
+      &::-webkit-scrollbar {
+        width: 6px;
+        background-color: #f5f5f5;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        background-color: #555;
+      }
+
+      .question {
+        padding: 15px 0;
+        border-bottom: 1px solid black;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        gap: 10px;
+
+        .answers {
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          align-items: start;
+          gap: 5px;
+
+          p {
+            font-size: 16px;
+
+            .result {
+              margin-left: 10px;
+              display: inline-block;
+              width: 10px;
+              height: 10px;
+              border-radius: 50%;
+              background-color: #38b000;
+            }
+          }
+
+          span {
+            font-weight: 500;
+          }
+        }
+
+        &__footer {
+          width: 100%;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          gap: 10px;
+
+          button {
+            border: 0;
+            outline: none;
+            height: 36px;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: 600;
+            border-radius: 6px;
+            transition: all 0.3s;
+            width: 100px;
+            color: #fff;
+
+            &:last-child {
+              background-color: #d00000;
+              &:hover {
+                background-color: #9d0208;
+              }
+            }
+
+            &:first-child {
+              background-color: #1eaae7;
+              &:hover {
+                background-color: #148abe;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.modal-question {
+  width: 100%;
+
+  .error__message {
+    color: red;
+    font-size: 12px;
+    font-weight: 400;
+  }
+
+  &.listening {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 15px;
+
+    .row {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      gap: 5px;
+      label,
+      span {
+        font-size: 16px;
+        font-weight: 400;
+      }
+
+      .input {
+        width: 100%;
+        height: 36px;
+        padding: 0 15px;
+        font-size: 16px;
+        border-radius: 6px;
+        border: 1px solid #adb5bd;
+        outline-color: #adb5bd;
+
+        &:focus {
+          border-color: #42c6ff;
+          outline-color: #42c6ff;
+        }
+
+        &::placeholder {
+          color: #bbb;
+        }
+      }
+
+      textarea {
+        width: 100%;
+        resize: none;
+        padding: 15px;
+        font-size: 16px;
+        border-radius: 6px;
+        border: 1px solid #adb5bd;
+        outline-color: #adb5bd;
+
+        &:focus {
+          border-color: #42c6ff;
+          outline-color: #42c6ff;
+        }
+
+        &::placeholder {
+          color: #bbb;
+        }
+
+        &::-webkit-scrollbar-track {
+          -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+          border-radius: 10px;
+          background-color: #f5f5f5;
+        }
+
+        &::-webkit-scrollbar {
+          width: 6px;
+          background-color: #f5f5f5;
+        }
+
+        &::-webkit-scrollbar-thumb {
+          border-radius: 10px;
+          -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+          background-color: #555;
+        }
+      }
+    }
+
+    .modal__footer {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: start;
+      justify-content: end;
+
+      button {
+        border: 0;
+        outline: none;
+        height: 36px;
+        cursor: pointer;
+        font-size: 16px;
+        font-weight: 600;
+        border-radius: 6px;
+        transition: all 0.3s;
+        width: 150px;
+        background-color: #1eaae7;
+        color: #fff;
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+
+        &:hover {
+          background-color: #148abe;
+        }
+      }
+    }
+
+    .answers {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+
+      &__header {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+
+        button {
+          background-color: transparent;
+          border: 0;
+          outline: none;
+          cursor: pointer;
+
+          svg {
+            width: 24px;
+            height: 24px;
+          }
+        }
+      }
+
+      &__body {
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        gap: 5px;
+
+        .answer {
+          width: 100%;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: space-between;
+
+          .remove-answer {
+            background-color: transparent;
+            border: 0;
+            outline: none;
+            cursor: pointer;
+
+            svg {
+              width: 20px;
+              height: 20px;
+            }
+          }
+
+          input {
+            &:first-child {
+              width: 80%;
+              height: 36px;
+              padding: 0 15px;
+              font-size: 16px;
+              border-radius: 6px;
+              border: 1px solid #adb5bd;
+              outline-color: #adb5bd;
+
+              &:focus {
+                border-color: #42c6ff;
+                outline-color: #42c6ff;
+              }
+
+              &::placeholder {
+                color: #bbb;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
