--- a/src/scss/features/test-management.scss
+++ b/src/scss/features/test-management.scss
@@ -547,3 +547,71 @@
     }
   }
 }
+
+.modal-add-test {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 10px;
+
+  &__footer {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    button {
+      border: 0;
+      outline: none;
+      height: 36px;
+      cursor: pointer;
+      font-size: 16px;
+      font-weight: 600;
+      border-radius: 6px;
+      transition: all 0.3s;
+      width: 50%;
+      background-color: #1eaae7;
+      color: #fff;
+      box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+
+      &:hover {
+        background-color: #148abe;
+      }
+    }
+  }
+
+  .row {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 5px;
+
+    label,
+    span {
+      font-size: 16px;
+      font-weight: 400;
+    }
+
+    input,
+    select {
+      width: 100%;
+      height: 36px;
+      padding: 0 15px;
+      font-size: 16px;
+      border-radius: 6px;
+      border: 1px solid #adb5bd;
+      outline-color: #adb5bd;
+
+      &:focus {
+        border-color: #42c6ff;
+        outline-color: #42c6ff;
+      }
+
+      &::placeholder {
+        color: #bbb;
+      }
+    }
+  }
+}
