--- a/src/scss/features/test-management.scss
+++ b/src/scss/features/test-management.scss
@@ -142,63 +142,25 @@
     background-color: #fff;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     gap: 10px;
 
-    .column {
+    .row-info {
       width: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: start;
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
       gap: 5px;
 
-      label {
+      span {
         font-size: 16px;
-        font-weight: 500;
-      }
+        font-weight: 400;
 
-      input {
-        width: 100%;
-        height: 36px;
-        padding: 0 15px;
-        font-size: 16px;
-        border-radius: 6px;
-        border: 1px solid #adb5bd;
-        outline-color: #adb5bd;
-
-        &:focus {
-          border-color: #42c6ff;
-          outline-color: #42c6ff;
+        &:first-child {
+          grid-column: span 2 / span 2;
         }
 
-        &::placeholder {
-          color: #bbb;
-        }
-      }
-    }
-
-    .save-test-infor {
-      width: 100%;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: end;
-
-      button {
-        border: 0;
-        outline: none;
-        height: 36px;
-        cursor: pointer;
-        font-size: 16px;
-        font-weight: 600;
-        border-radius: 6px;
-        transition: all 0.3s;
-        width: 50%;
-        background-color: #38b000;
-        color: #fff;
-
-        &:hover {
-          background-color: #006400;
+        &:last-child {
+          grid-column: span 10 / span 10;
         }
       }
     }
