--- a/src/scss/features/test-management.scss
+++ b/src/scss/features/test-management.scss
@@ -163,6 +163,26 @@
           grid-column: span 10 / span 10;
         }
       }
+
+      .edit-test {
+        grid-column: span 2 / span 2;
+        border: 0;
+        outline: none;
+        flex: 1;
+        height: 36px;
+        cursor: pointer;
+        font-size: 16px;
+        font-weight: 500;
+        border-radius: 6px;
+        transition: all 0.3s;
+
+        background-color: #1eaae7;
+        color: #fff;
+
+        &:hover {
+          background-color: #148abe;
+        }
+      }
     }
   }
 
@@ -550,6 +570,12 @@
     flex-direction: column;
     align-items: start;
     gap: 5px;
+
+    .error-message {
+      font-size: 12px;
+      font-weight: 400;
+      color: red;
+    }
 
     label,
     span {
