--- a/src/scss/features/test-management.scss
+++ b/src/scss/features/test-management.scss
@@ -115,6 +115,10 @@
       font-weight: 600;
     }
 
+    a {
+      color: #000;
+    }
+
     .back {
       text-decoration: none;
       display: inline-flex;
@@ -140,7 +144,7 @@
     padding: 20px;
     border-radius: 5px;
     background-color: #fff;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    box-shadow: rgba(149, 157, 165, 0.1) 0px 10px 24px;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     gap: 10px;
@@ -186,157 +190,15 @@
     }
   }
 
-  .test-part {
+  .listening-part,
+  .reading-part {
     width: 100%;
     margin-top: 20px;
 
     &__header {
-      width: 100%;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-between;
-
       h3 {
         font-size: 24px;
         font-weight: 600;
-      }
-
-      button {
-        border: 0;
-        outline: none;
-        height: 36px;
-        cursor: pointer;
-        font-size: 16px;
-        font-weight: 600;
-        border-radius: 6px;
-        transition: all 0.3s;
-        width: 150px;
-        background-color: #1eaae7;
-        color: #fff;
-        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-
-        &:hover {
-          background-color: #148abe;
-        }
-      }
-    }
-
-    &__reading-resource {
-      margin-top: 20px;
-      margin-bottom: 20px;
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 10px;
-
-      img {
-        width: 600px;
-      }
-
-      p {
-        font-size: 16px;
-        display: block;
-        width: 100%;
-        text-align: left;
-      }
-    }
-
-    &__questions {
-      width: 100%;
-      margin-top: 20px;
-      background-color: #fff;
-      box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-      border-radius: 5px;
-      padding: 20px;
-      max-height: 600px;
-      overflow-y: auto;
-      &::-webkit-scrollbar-track {
-        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-        border-radius: 10px;
-        background-color: #f5f5f5;
-      }
-
-      &::-webkit-scrollbar {
-        width: 6px;
-        background-color: #f5f5f5;
-      }
-
-      &::-webkit-scrollbar-thumb {
-        border-radius: 10px;
-        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-        background-color: #555;
-      }
-
-      .question {
-        padding: 15px 0;
-        border-bottom: 1px solid black;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: start;
-        gap: 10px;
-
-        .answers {
-          width: 100%;
-          display: flex;
-          flex-direction: column;
-          align-items: start;
-          gap: 5px;
-
-          p {
-            font-size: 16px;
-
-            .result {
-              margin-left: 10px;
-              display: inline-block;
-              width: 10px;
-              height: 10px;
-              border-radius: 50%;
-              background-color: #38b000;
-            }
-          }
-
-          span {
-            font-weight: 500;
-          }
-        }
-
-        &__footer {
-          width: 100%;
-          display: flex;
-          flex-direction: row;
-          align-items: center;
-          gap: 10px;
-
-          button {
-            border: 0;
-            outline: none;
-            height: 36px;
-            cursor: pointer;
-            font-size: 16px;
-            font-weight: 600;
-            border-radius: 6px;
-            transition: all 0.3s;
-            width: 100px;
-            color: #fff;
-
-            &:last-child {
-              background-color: #d00000;
-              &:hover {
-                background-color: #9d0208;
-              }
-            }
-
-            &:first-child {
-              background-color: #1eaae7;
-              &:hover {
-                background-color: #148abe;
-              }
-            }
-          }
-        }
       }
     }
   }
