update ui test detail

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -14,3 +14,4 @@
 @import "./features/user-management.scss";
 @import "./features/test-management.scss";
 @import "./components/layout/main.scss";
+@import "./components/question.scss";
