--- a/src/scss/features/test-management.scss
+++ b/src/scss/features/test-management.scss
@@ -201,6 +201,15 @@
         font-weight: 600;
       }
     }
+
+    &__content {
+      margin-top: 10px;
+      width: 100%;
+      padding: 20px;
+      border-radius: 5px;
+      background-color: #fff;
+      box-shadow: rgba(149, 157, 165, 0.1) 0px 10px 24px;
+    }
   }
 }
 
