--- a/src/scss/components/question.scss
+++ b/src/scss/components/question.scss
@@ -77,11 +77,12 @@
   gap: 5px;
 
   &__left {
-    padding-right: 5px;
+    padding: 10px;
+    padding-left: 0;
     max-height: 500px;
     overflow-y: auto;
     &::-webkit-scrollbar {
-      width: 10px;
+      width: 6px;
     }
 
     /* Track */
@@ -105,10 +106,11 @@
   }
 
   &__right {
+    padding: 10px;
     max-height: 500px;
     overflow-y: auto;
     &::-webkit-scrollbar {
-      width: 10px;
+      width: 6px;
     }
 
     /* Track */
