--- a/src/scss/features/test-management.scss
+++ b/src/scss/features/test-management.scss
@@ -196,9 +196,37 @@
     margin-top: 20px;
 
     &__header {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
       h3 {
         font-size: 24px;
         font-weight: 600;
+      }
+
+      .add-question {
+        width: 40px;
+        height: 40px;
+        border: 0;
+        outline: none;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #1eaae7;
+        transition: all 0.3s;
+        border-radius: 5px;
+        color: #fff;
+
+        &:hover {
+          background-color: #148abe;
+        }
+
+        svg {
+          font-size: 20px;
+        }
       }
     }
 
