--- a/src/scss/features/home.scss
+++ b/src/scss/features/home.scss
@@ -224,3 +224,49 @@
     }
   }
 }
+
+.user-detail-page {
+  padding-bottom: 40px;
+  padding-right: 30px;
+
+  h3 {
+    font-size: 24px;
+    font-weight: 600;
+  }
+  .user-infor {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(9, 1fr);
+
+    .infor {
+      grid-column: span 6 / span 6;
+
+      .row {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+
+        &__left {
+          grid-column: span 2 / span 2;
+          font-size: 16px;
+        }
+
+        &__right {
+          grid-column: span 4 / span 4;
+          font-size: 16px;
+        }
+      }
+    }
+
+    .avatar {
+      grid-column: span 3 / span 3;
+      img {
+        width: 300px;
+        height: 300px;
+        border-radius: 50%;
+        object-fit: center;
+        object-position: center;
+      }
+    }
+  }
+}
